--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,11 @@ version = "0.1.0"
 ClusterManagers = "34f1f09b-3a8b-5176-ab39-66d58a4d544e"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MCIntegration = "ea1e2de9-7db7-4b42-91ee-0cd1bf6df167"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -20,9 +22,11 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ClusterManagers = "2.0.0"
 Distributed = "1.11.0"
 Distributions = "0.25.120"
+Interpolations = "0.16.2"
 JLD2 = "0.5.15"
 MCIntegration = "0.4.2"
 ProgressMeter = "1.10.4"
+Random = "1.11.0"
 Roots = "2.2.7"
 Serialization = "1.11.0"
 SpecialFunctions = "2.5.1"
