--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MCIntegration = "ea1e2de9-7db7-4b42-91ee-0cd1bf6df167"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
@@ -25,6 +26,7 @@ Distributions = "0.25.120"
 Interpolations = "0.16.2"
 JLD2 = "0.5.15"
 MCIntegration = "0.4.2"
+Optim = "1.13.2"
 ProgressMeter = "1.10.4"
 Random = "1.11.0"
 Roots = "2.2.7"
