--- a/Project.toml
+++ b/Project.toml
@@ -1,21 +1,24 @@
 name = "ProtonShape"
 uuid = "9fc63d1a-569a-4baa-96b6-53563810f80e"
-authors = ["Dana Avramescu <dana.d.avramescu@jyu.fi>"]
 version = "0.1.0"
+authors = ["Dana Avramescu <dana.d.avramescu@jyu.fi>"]
 
 [deps]
 ClusterManagers = "34f1f09b-3a8b-5176-ab39-66d58a4d544e"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MCIntegration = "ea1e2de9-7db7-4b42-91ee-0cd1bf6df167"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+SphericalHarmonics = "c489a379-e885-57ff-9236-bd896d33c250"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
@@ -23,14 +26,17 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 ClusterManagers = "2.0.0"
 Distributed = "1.11.0"
 Distributions = "0.25.120"
+FFTW = "1.10.0"
 Interpolations = "0.16.2"
 JLD2 = "0.5.15"
 MCIntegration = "0.4.2"
 Optim = "1.13.2"
 ProgressMeter = "1.10.4"
 Random = "1.11.0"
+Revise = "3.13.1"
 Roots = "2.2.7"
 Serialization = "1.11.0"
 SpecialFunctions = "2.5.1"
+SphericalHarmonics = "0.1.20"
 Statistics = "1.11.1"
 Symbolics = "6.40.0"
